fixed table overflow on mobile

--- a/src/components/htw-berlin-table/htw-berlin-table.css
+++ b/src/components/htw-berlin-table/htw-berlin-table.css
@@ -5,6 +5,7 @@
 table {
   border-collapse: collapse;
   width: 100%;
+  table-layout: fixed;
 }
 
 td,
